--- a/.config/sway/config
+++ b/.config/sway/config
@@ -56,10 +56,10 @@ exec_always pkill kanshi; exec kanshi
    }
 
    input type:keyboard {
-       xkb_layout "se"
-       xkb_variant ,nodeadkeys
-       xkb_options caps:escape
-   }
+       xkb_layout "se,us"
+       #xkb_variant ,nodeadkeys
+       xkb_options "grp:win_space_toggle,caps:escape" 
+    }
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
