--- a/.config/sway/config
+++ b/.config/sway/config
@@ -43,7 +43,7 @@ exec_always pkill kanshi; exec kanshi
 #          timeout 300 'swaylock -f -c 000000' \
 #          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
 #          before-sleep 'swaylock -f -c 000000'
-#
+
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
@@ -95,6 +95,8 @@ exec_always pkill kanshi; exec kanshi
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
+    bindsym $mod+Shift+s exec grim -g "$(slurp -d)" - | wl-copy
 
     for_window [app_id="blueman-manager"] floating enable, border normal
 		default_border pixel 2
