--- a/.config/sway/config
+++ b/.config/sway/config
@@ -23,10 +23,10 @@ set $term foot
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg /home/hsa/Pictures/pirlot_bath.jpg center
 
 # Autostart
-exec_always pkill kanshi; exec kanshi 
+#exec_always pkill kanshi; exec kanshi 
 
 #
 # Example configuration:
@@ -173,6 +173,7 @@ exec_always pkill kanshi; exec kanshi
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
     bindsym $mod+w layout tabbed
+    bindsym $mod+z layout default
     bindsym $mod+e layout toggle split
 
     # Make the current focus fullscreen
